# hypergraph-bistability

./: ARCHITECTURE.md  PROJECT_HANDOFF.md  README.md  _conflict_regression_v2.json  _continuity_regression.json  _continuity_regression_after_decision_residue.json  _doc_writer_cli_smoke.txt  _doc_writer_smoke.txt  _eval_results.json  _eval_results_stress_analysis_cli.json  _eval_results_stress_graph.json  _eval_results_stress_graph_v2.json  _eval_results_stress_relations.json  _eval_results_stress_schema.json  _eval_results_stress_v4.json  _experiment_associative_expansion_hyperedge_v2.json  _experiment_associative_expansion_hyperedge_v3.json  _experiment_associative_expansion_llm.json  _experiment_associative_expansion_runtime_promoted.json  _experiment_associative_expansion_runtime_promoted_v2.json  _experiment_associative_expansion_v2.json  _experiment_competition.json  _experiment_conflict_links.json  _experiment_conflict_links_v4.json  _experiment_conflict_links_with_continuity.json  _experiment_phase_progress_v2.json  _experiment_two_stage_conflict.json  _llm_eval_results.json  _llm_eval_results_minimax_m27_v2.json  _llm_eval_results_minimax_m27_v3.json  _llm_eval_results_minimax_one_click.json  _llm_eval_results_minimax_stress_one_click.json  _llm_eval_results_placeholder.json  _llm_eval_results_stress_seeded.json  _llm_long_task_regression_minimax_one_click.json  _llm_product_regression_placeholder.json  _llm_product_regression_procedure_v1.json  _long_task_regression.json  _long_task_regression_v3.json  _long_task_regression_v4.json  (+29 more)
artifacts/: _conflict_regression_v1.json  _continuity_regression_v2.json  _continuity_regression_v3.json  _doc_writer_instruction_en.txt  _doc_writer_instruction_zh.txt  _doc_writer_minimax_en_trial.txt  _doc_writer_minimax_trial.txt  _doc_writer_minimax_zh_trial.txt  _eval_results_core.json  _eval_results_harder.json  _eval_results_stress.json  (+64 more)
docs/: index.md  (+5 more)
(+419 files in other folders)
