[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraph-bistability"
version = "0.1.0"
description = "Agent Memory Module based on hypergraph multistability theory with physics-grounded λ_c control"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Project Authors"}
]
keywords = ["hypergraph", "multistability", "agent-memory", "physics", "bistability", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/chleya/hypergraph-bistability"
Repository = "https://github.com/chleya/hypergraph-bistability.git"
Issues = "https://github.com/chleya/hypergraph-bistability/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
